# whiteboardfox-decomp

./: .gitignore  Cargo.toml  class_bindings.json  classes.txt  classes_ids.txt  constructors.json  constructors_ids.txt  instantiations.json  packages.json  test.js  translations.json  whiteboard-0-manual-deobf.js  whiteboard-0.js
src/: class_bindings.rs  constructors.rs  main.rs
