[package]
name = "whiteboardfox-decomp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resast = "0.5.0"
ressa = "0.8.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
